--- a/lang/hu/lang.json
+++ b/lang/hu/lang.json
@@ -19,7 +19,7 @@
 	"17": "Ehhez az email címhez nem tartozik fiók!",
 	"18": "Az üzenet túl hosszú!",
 	"19": "Az egyszeri jelszó helytelen!",
-	"20": "Legfeljebb 5 Yubikeyt csatolhat a fiókjához!",
+	"20": "Legfeljebb 5 Yubikey-t csatolhat a fiókjához!",
 	"21": "Ez a Yubikey már hozzá volt adva a fiókjához.",
 	"23": "A megadott Yubikey egyszeri jelszó helytelen!",
 	"24": "A Yubikey a megadott ID-vel nincs a fiókjához csatolva.",
@@ -124,9 +124,9 @@
 	"backup_codes": "Tartalék kódok:",
 	"yubikey_added_successfully": "A Yubikey sikeresen hozzáadva",
 	"yubikey_removed_successfully": "A Yubikey sikeresen eltávolítva",
-	"yubikey_insert_device": "1. Illesztje be a Yubikey-jét a számítógépbe",
-	"yubikey_focus_input": "2. Nyomja meg az OTP Input gombot",
-	"yubikey_press_button": "3. Nyomja meg a Yubikey-jén található arany gombot",
+	"yubikey_insert_device": "1. Illesztje be a Yubikey-t a számítógépbe",
+	"yubikey_focus_input": "2. Nyomja meg az OTP Input (egyszeri jelszó bevitele) gombot",
+	"yubikey_press_button": "3. Nyomja meg a Yubikey-n található arany gombot",
 	"auto_search": "Automatikus keresés",
 	"total_passwords": "Jelszavak összesen",
 	"decryption_time": "Dekódolási idő",
