--- a/lang/ja/lang.json
+++ b/lang/ja/lang.json
@@ -1,40 +1,40 @@
 {
-	"0": "成功",
-	"1": "ユーザー名が無効です！",
-	"2": "パスワードが正しくありません！",
+	"0": "完了",
+	"1": "無効なユーザー名です！",
+	"2": "パスワードが間違っています！",
 	"3": "データベースにデータを挿入中に問題が発生しました。",
 	"4": "ユーザ名がすでに登録されています！",
-	"5": "あなたのパスワードは安全度が低いです！",
-	"6": "メールが無効です！",
-	"7": "ユーザー名は存在しません！",
+	"5": "安全性の低いパスワードです！",
+	"6": "無効なメールアドレスです！",
+	"7": "ユーザー名が存在しません！",
 	"8": "保存されたパスワードがありません。",
-	"9": "ドメインが無効です！",
+	"9": "無効なドメインです！",
 	"10": "ユーザーはこのパスワードを所有していません！",
 	"11": "データベースからデータを削除中に問題が発生しました。",
-	"12": "ユーザー名は6〜30文字の長さで、文字、数字、ドットのみを含めることができます。",
+	"12": "ユーザー名には6〜30文字の長さで文字、数字、ドットのみ使用できます。",
 	"13": "データベースのデータを更新中に問題が発生しました。",
-	"14": "Jsonは無効です！",
-	"15": "このサーバーはこれ以上のユーザーを受け入れることができません！",
-	"16": "保存されているパスワードの最大数に達しました！",
+	"14": "無効なJsonです！",
+	"15": "このサーバーはユーザー数の上限に達しました。",
+	"16": "保存可能なパスワードの最大数に達しました！",
 	"17": "このメールアドレスのアカウントは存在しません！",
 	"18": "メッセージが長すぎます！",
-	"19": "OTPが正しくありません！",
-	"20": "リンクできるYubikeysは5つまでです！",
-	"21": "このYubikeyはすでにあなたのアカウントにリンクされています。",
+	"19": "無効なOTPです！",
+	"20": "Yubikeysは5つ以上登録することはできません！",
+	"21": "このYubikeyは既にあなたのアカウントに登録されています。",
 	"23": "提供されたYubikeyOTPは無効です！",
-	"24": "提供されたIDを持つYubikeyはあなたのアカウントにリンクされていません。",
+	"24": "提供されたIDを持つYubikeyはあなたのアカウントに登録されていません。",
 	"25": "トークンが正しくないか、有効期限が切れています。もう一度サインインしてください。",
-	"26": "二要素認証はすでに有効になっています。",
+	"26": "二要素認証は既に有効になっています。",
 	"27": "二要素認証が有効になっていません。",
 	"28": "このサーバーではメールが有効になっていません。",
-	"29": "ライセンスキーが無効です!",
+	"29": "無効なライセンスキーです！",
 	"30": "このライセンス キーは既に使用されています。",
 	"300": "ウェブサイトが長すぎます！",
-	"301": "Username is too long!",
-	"302": "Password is too long!",
+	"301": "ユーザー名が長すぎます！",
+	"302": "パスワードが長すぎます！",
 	"303": "メッセージが長すぎます！",
 	"400": "アクションはGETで提供されませんでした！",
-	"401": "アクションが無効です！",
+	"401": "無効なアクションです！",
 	"403": "POSTで必要なすべての値を指定していません。",
 	"404": "APIに接続できません。",
 	"429": "送信するリクエストが多すぎます。このアクションを再度実行する前に、しばらくお待ちください。",
@@ -42,7 +42,7 @@
 	"506": "メールサーバーへの接続中に問題が発生しました。",
 	"999": "このエンドポイントを使用する権限がありません。",
 	"server": "サーバ",
-	"website": "Webサイト",
+	"website": "ウェブサイト",
 	"username": "ユーザー名",
 	"email": "Eメール",
 	"password": "パスワード",
@@ -50,25 +50,25 @@
 	"signup": "サインアップ",
 	"signout": "サインアウト",
 	"terms_of_service": "利用規約\n",
-	"okay": "わかった",
+	"okay": "完了",
 	"add": "追加",
-	"change": "変化する",
-	"use": "使用する",
+	"change": "変更",
+	"use": "使用",
 	"copy": "コピー",
 	"send": "送信",
 	"cancel": "キャンセル",
 	"try_again": "再試行",
-	"success": "成功",
+	"success": "完了",
 	"error": "エラー",
 	"enable": "有効",
-	"disable": "無効にする",
+	"disable": "無効",
 	"remove": "削除",
 	"delete": "消去",
-	"import": "輸入",
+	"import": "インポート",
 	"importing": "インポート",
 	"importing_passwords": "{amount} 個のパスワードをインポートしています...",
 	"import_from": "{name} からインポート",
-	"import_paste": "{name} パスワード マネージャーから {type} データを貼り付けます。",
+	"import_paste": "パスワード マネージャー {name} から {type} データを貼り付けます。",
 	"import_invalid": "インポートのデータが無効です！",
 	"import_success": "{success_number}パスワードが正常にインポートされました！",
 	"import_errors": "{success_number}パスワードは正常にインポートされましたが、{error_number}パスワードはインポートされませんでした。",
